--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main>
-    <h1>my first project </h1>
+    <h1>sai varun is studying in vcet college in cse 3rd year.</h1>
   </main>
 </body>
 
