--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main>
-    <h1>chintu is studying in vcet college in cse 3rd year.Roll number 21BT1A0512</h1>
+    <h1>Sandeep roll number-21BT1A6603,CSE(AI &ML)</h1>
   </main>
 </body>
 
